Update permission check code and add tests
- Update permission check based on code review
- Add tests for permission check